# gitconfig-proxy

./: Cargo.toml  Justfile
src/: __oldmain.rs  application.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: clone.rs  copu.rs  hello.rs  prefix.rs  pull.rs  start.rs
