[package]
name = "git-clone-or-pull"
version = "0.1.0"
authors = ["jywww <jywww@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
anyhow = "1"
url = "2"
glob = "*"
scopeguard = "1"
futures = "0.3"
# futures-async-stream = "0.2"

[dependencies.tokio]
version = "1"
features = ["process", "macros", "io-util", "rt-multi-thread"]
