[package]
name = "git-clone-or-pull"
version = "0.1.0"
authors = ["jywww <jywww@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
anyhow = "1"
url = "2"
scopeguard = "1"
# futures-async-stream = "0.2"
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
futures = { version = "0.3", features = ["thread-pool"] }
#glob = "*"
#futures = "0.3"

[dependencies.tokio]
version = "1"
features = ["process", "macros", "io-util", "rt-multi-thread"]

[dependencies.abscissa_core]
version = "0.6"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6", features = ["testing"] }
once_cell = "1.10"
